# poc-icc-webrtc

./: 16-02-26.patch  17-02-2026-build-with-gcc.patch  18-02-26.patch  a.patch  build.patch  build.sh  cli_wnd.patch  qb.sh  webrtc.gclient
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
client/: BUILD.gn
examples/: BUILD.gn
examples/peerconnection-cli/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection-cli/client/linux/: cli_wnd.h  main.cc  main_cli.cc  main_wnd.cc  main_wnd.h
examples/peerconnection-cli/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection/client/linux/: main.cc  main_cli.cc  main_wnd.cc  main_wnd.h
examples/peerconnection/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection2/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection2/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection2/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection3/: README.md  main.cc
examples/peerconnection4/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection4/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection4/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection5/: a.patch
examples/peerconnection5/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection5/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection5/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection6/: a.patch
examples/peerconnection6/client/: conductor.cc  conductor.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
examples/peerconnection6/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection6/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection7/client/: conductor.cc  conductor.h  defaults.cc  peer_connection_client.cc
examples/peerconnection7/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection7/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
examples/peerconnection8/client/: conductor.cc  conductor.h  defaults.cc  defaults.h  main_wnd.h
examples/peerconnection8/client/linux/: main.cc  main_wnd.cc  main_wnd.h
examples/peerconnection8/server/: data_socket.cc  data_socket.h  main.cc  peer_channel.cc  utils.cc
peerclient/: CMakeLists.txt
peerclient2/: CMakeLists.txt
peerclient2/client/linux/: main.cc  main_wnd.cc
