import("/workspaces/src/webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
  import("//third_party/jni_zero/jni_zero.gni")
} else if (is_mac) {
  import("//build/config/mac/rules.gni")
} else if (is_ios) {
  import("//build/config/ios/rules.gni")
} else if (is_linux || is_chromeos) {
  import("//build/config/linux/pkg_config.gni")
}

group("examples2") {
    deps = [ ":peerconnection_client2" ]
}
rtc_executable("peerconnection_client2") {
    testonly = true
    sources = [
        "client/main1.cc",
    ]
}
