# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

import("//build/config/linux/pkg_config.gni")

group("examples") {
  # This target shall build all targets in examples.
  testonly = true
  deps = []

  if (is_linux || is_chromeos || is_win) {
    deps += [
      ":peerconnection_client_gui",
      ":peerconnection_client_cli",
      ":pclient2",
      ":pclient3",
      ":pclient4",
      ":pclient5",
      ":pclient6",
      ":pclient7",
      ":pclient8",
    ]
  }
}

if (is_linux || is_chromeos || is_win) {
  if (is_linux || is_chromeos) {
    pkg_config("gtk_config") {
      packages = [
        # Gtk requires gmodule, but it does not list it as a dependency in some
        # misconfigured systems.
        "gmodule-2.0",
        "gthread-2.0",
        "gtk+-3.0",
      ]
    }
  }

  rtc_executable("peerconnection_client_gui") {
    testonly = true
    sources = [
      "peerconnection/client/conductor.cc",
      "peerconnection/client/conductor.h",
      "peerconnection/client/defaults.cc",
      "peerconnection/client/defaults.h",
      "peerconnection/client/peer_connection_client.cc",
      "peerconnection/client/peer_connection_client.h",
    ]

    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection/client/linux/main.cc",
        "peerconnection/client/linux/main_wnd.cc",
        "peerconnection/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
        "X11",
        "Xcomposite",
        "Xext",
        "Xrender",
      ]
      configs += [ ":gtk_config" ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("peerconnection_client_cli") {
    testonly = true
    sources = [
      "peerconnection-cli/client/conductor.cc",
      "peerconnection-cli/client/conductor.h",
      "peerconnection-cli/client/defaults.cc",
      "peerconnection-cli/client/defaults.h",
      "peerconnection-cli/client/peer_connection_client.cc",
      "peerconnection-cli/client/peer_connection_client.h",
    ]

    include_dirs = [
      ".",
    ]

    deps = [
      "../../:webrtc",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection-cli/client/linux/main.cc",
        "peerconnection-cli/client/linux/main_wnd.cc",
        "peerconnection-cli/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient2") {
    testonly = true
    sources = [
      "peerconnection2/client/conductor.cc",
      "peerconnection2/client/conductor.h",
      "peerconnection2/client/defaults.cc",
      "peerconnection2/client/defaults.h",
      "peerconnection2/client/peer_connection_client.cc",
      "peerconnection2/client/peer_connection_client.h",
    ]
    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection2/client/linux/main.cc",
        "peerconnection2/client/linux/main_wnd.cc",
        "peerconnection2/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
      ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient3") {
    testonly = true
    sources = [
      "peerconnection3/main.cc",
    ]
    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
      ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient4") {
    testonly = true
    sources = [
      "peerconnection4/client/conductor.cc",
      "peerconnection4/client/conductor.h",
      "peerconnection4/client/defaults.cc",
      "peerconnection4/client/defaults.h",
      "peerconnection4/client/peer_connection_client.cc",
      "peerconnection4/client/peer_connection_client.h",
    ]
    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection4/client/linux/main.cc",
        "peerconnection4/client/linux/main_wnd.cc",
        "peerconnection4/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
      ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient5") {
    testonly = true
    sources = [
      "peerconnection5/client/conductor.cc",
      "peerconnection5/client/conductor.h",
      "peerconnection5/client/defaults.cc",
      "peerconnection5/client/defaults.h",
      "peerconnection5/client/peer_connection_client.cc",
      "peerconnection5/client/peer_connection_client.h",
    ]

    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection5/client/linux/main.cc",
        "peerconnection5/client/linux/main_wnd.cc",
        "peerconnection5/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
        "X11",
        "Xcomposite",
        "Xext",
        "Xrender",
      ]
      configs += [ ":gtk_config" ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient6") {
    testonly = true
    sources = [
      "peerconnection6/client/conductor.cc",
      "peerconnection6/client/conductor.h",
      "peerconnection6/client/defaults.cc",
      "peerconnection6/client/defaults.h",
      "peerconnection6/client/peer_connection_client.cc",
      "peerconnection6/client/peer_connection_client.h",
    ]

    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection6/client/linux/main.cc",
        "peerconnection6/client/linux/main_wnd.cc",
        "peerconnection6/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
      ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient7") {
    testonly = true
    sources = [
      "peerconnection7/client/conductor.cc",
      "peerconnection7/client/conductor.h",
      "peerconnection7/client/defaults.cc",
      "peerconnection7/client/defaults.h",
      "peerconnection7/client/peer_connection_client.cc",
      "peerconnection7/client/peer_connection_client.h",
    ]

    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection7/client/linux/main.cc",
        "peerconnection7/client/linux/main_wnd.cc",
        "peerconnection7/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
        "X11",
        "Xcomposite",
        "Xext",
        "Xrender",
      ]
      configs += [ ":gtk_config" ]
    }

    deps += [
      "../../rtc_base:rtc_json",
      "//third_party/abseil-cpp/absl/flags:parse",
    ]
  }
  rtc_executable("pclient8") {
    testonly = true
    sources = [
      "peerconnection8/client/conductor.cc",
      "peerconnection8/client/conductor.h",
      "peerconnection8/client/defaults.cc",
      "peerconnection8/client/defaults.h",
    ]

    include_dirs = [
      ".",
    ]
    deps = [
      "../../:webrtc",
      "../../test:field_trial",
      "../../test:frame_generator_capturer",
      "../../test:platform_video_capturer",
      "../../test:rtp_test_utils",
      "../../test:test_video_capturer",
    ]
    if (is_linux || is_chromeos) {
      sources += [
        "peerconnection8/client/linux/main.cc",
        "peerconnection8/client/linux/main_wnd.cc",
        "peerconnection8/client/linux/main_wnd.h",
      ]
      cflags = [ "-Wno-deprecated-declarations" ]
      
    }

    deps += [
      "../../rtc_base:rtc_json",
    ]
  }
}
